fix(demo/elk): fix paper alignment within flexbox

--- a/packages/joint-core/demo/elk/styles.scss
+++ b/packages/joint-core/demo/elk/styles.scss
@@ -14,10 +14,6 @@ body {
     transform: translateZ(0);
 
     .joint-paper {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         border: 1px solid #E2E2E2;
 
         &.full-view .inner-label {
